# bkkkkkz

./: .browserslistrc  .editorconfig  .electron-builder.config.js  .electron-vendors.cache.json  .eslintrc.json  .gitignore  .nano-staged.mjs  .prettierignore  .prettierrc.js  README.md  app.vue  components.json  files.db  nuxt.config.ts  package-lock.json  package.json  playwright.config.ts  tailwind.config.cjs  tailwind.config.js  vitest.config.js
src-tauri/: Cargo.toml  files.db  tauri.conf.json
src-tauri/bindings/: AttrKey.ts  AttrValue.ts  BookFromDb.ts  BookListGetResult.ts  BookReadResult.ts  BookSaveResult.ts  DateRead.ts  DefaultSchema.ts  EmptySettings.ts  ErrorActionCode.ts  ErrorFromRust.ts  FolderEventEmit.ts  IPCEmitEvent.ts  IPCResponces.ts  InputSize.ts  NumberSettings.ts  NumberStyle.ts  Schema.ts  SchemaAttrKey.ts  SchemaAttrType.ts  SchemaItem.ts  SchemaLoadList.ts  SettingsTypeNumber.ts  SettingsTypeText.ts  SettingsTypeTextCollection.ts  TableNames.ts  TextCollectionSettings.ts  TextFont.ts  TextSettings.ts  TextTheme.ts  TextWeight.ts
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: db.rs  emitter.rs  errorhandling.rs  files.rs  filewatcher.rs  lib.rs  main.rs  metacache.rs  schema.rs
src-tauri/src/cache/: create_tables.rs  dbconn.rs  mod.rs  query.rs  tables.rs  write.rs
src-tauri/src/files/: io.rs  metadata.rs  mod.rs  utils.rs
src-tauri/src/schema/: defaults.rs  mod.rs  operations.rs  types.rs
src-tauri/src/utils/: errorhandling.rs  global_app.rs  mod.rs
src-tauri/src/watcher/: event_handler.rs  (+4 more)
(+269 files in other folders)
