[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.71"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.0-rc.13", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.0.0-rc.16", features = ["protocol-asset"] }
tauri-plugin-log = "2.0.0-rc"
tauri-plugin-store = "2.0.0-rc"
tauri-plugin-fs = { version = "2.0.0-rc", features = ["watch"] }
tauri-plugin-dialog = "2.0.0-rc"
tauri-plugin-sql = { version = "2.0.0-rc", features = ["sqlite"] }
notify = "6.1.1"
walkdir = "2.5.0"
once_cell = "1.20.2"
chrono = "0.4.38"
serde_yml = "0.0.12"
sqlx = { version = "0.8", features = [ "runtime-tokio", "sqlite", "macros", ] }
tokio = { version = "1", features = ["sync"] }
serde_with = "3.11.0"
ts-rs = { version = "10.1.0", features = ["serde-compat", "serde-json-impl"] }

